feat: liking, better sessions, chart uploading, chart visibility editing, bug fixes, more database fields, get chart, sort chart

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Private files
 config.yml
 
+# script asset files, make em urselves
+scripts/assets/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
